--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -1,12 +1,12 @@
 .preview {
     width: 100%;
-    height: 200px;
+    max-height: 40vh;
     overflow: auto;
     background-color: rgba(0.8,0.4,0.30,0.05);
     color: black;
     opacity: 0.75;
     text-align: left;
     border: 1px solid grey;
-    margin-top: 30px;
+    // margin-top: 30px;
     padding: 4px;
 }
