--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 *::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
+  height: 6px;
   background-color: #F5F5F5;
 }
 
@@ -16,5 +17,18 @@
 *::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #F5F5F5;
-  border-radius: 8px;
+}
+
+.card {
+  width: 90vw;
+  margin: 16px;
+  height: 85vh;
+}
+
+.card-container {
+  width: 50%;
+}
+
+.grid-container {
+  width: 44.5vw;
 }
