--- a/src/components/preview/preview.scss
+++ b/src/components/preview/preview.scss
@@ -1,6 +1,7 @@
 .preview {
     width: 100%;
-    max-height: 40vh;
+    width: 43.5vw;
+    height: 77vh;
     overflow: auto;
     background-color: rgba(0.8,0.4,0.30,0.05);
     color: black;
